dist-iter/tests/compile_fail_tests/task_macro_wrong_args/map_chunk_mut_buffer_with_return_value.stderr
error[E0308]: mismatched types
  --> tests/compile_fail_tests/task_macro_wrong_args/map_chunk_mut_buffer_with_return_value.rs:10:20
   |
4  |       [1, 2, 3, 4, 5].into_iter().dist_map_chunk(map_chunk_task!(
   |  ________________________________________________-
5  | |         CHUNK_SIZE = 2,
6  | |         |buf: &mut [i32]| {
7  | |             for item in buf {
...  |
10 | |             return buf;
   | |                    ^^^ expected `()`, found `&mut [i32]`
11 | |         }
12 | |     ));
   | |_____- help: try adding a return type: `-> &mut [i32]`
